--- a/about.html
+++ b/about.html
@@ -105,22 +105,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="row">
 				<div class="col-lg-6 w3lsits_works-grid mt-xl-4">
 					<div class="wthree-bottom">
-						<h6 class="subheading-w3ls text-uppercase text-dark mb-4">DEAL OF THE <span class="font-weight-bold">DAY</span>
-							organic good <span class="font-weight-bold">foods 50%</span> off</h6>
+						<h6 class="subheading-w3ls text-uppercase text-dark mb-4">Working For You <span class="font-weight-bold">Since 2015.</span>
+							Sale upto <span class="font-weight-bold">30% off on all products </span> </h6>
 						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, eaque ipsa
 							quae ab illo inventore veritatis et quasi architecto.</p>
 						<a href="about.html" class="btn button-style mt-sm-5 mt-4">Read More</a>
 					</div>
 				</div>
 				<div class="col-lg-6 w3lsits_works-grid1 mt-lg-0 mt-sm-5 mt-4">
-					<img src="images/about.jpg" alt="" class="img-fluid" />
+					<img src="images/liv.jpg" alt="" class="img-fluid" />
 				</div>
 			</div>
 		</div>
 	</section>
 	<!-- //about -->
 
-	<!-- middle -->
+	<!-- middle --><!-- 
 	<section class="what-w3ls">
 		<div class="container-fluid py-xl-5 py-lg-3">
 			<div class="offset-xl-7 offset-lg-6 offset-md-4 offset-sm-2">
@@ -136,19 +136,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- //middle -->
 
 	<!-- team -->
 	<section class="team pb-5" id="farmer">
 		<div class="container pb-xl-5 pb-lg-3">
-			<h3 class="title-w3 mb-5 font-weight-bold">Our Farmers <span>Caption Here</span></h3>
+			<h3 class="title-w3 mb-5 font-weight-bold">Our Top Performers <span>Caption Here</span></h3>
 			<div class="row inner-sec-w3layouts-w3pvt-lauinfo">
 				<div class="col-md-4 team-grids text-center">
-					<img src="images/team1.jpg" class="img-fluid" alt="">
+					<img src="images/sa.jpg" class="img-fluid" alt="">
 					<div class="team-info">
 						<div class="caption mb-3">
-							<h4>John Doe</h4>
+							<h4>Saurabh Mishra</h4>
 						</div>
 						<div class="social-icons-section">
 							<a class="fac" href="#">
@@ -164,10 +164,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 				</div>
 				<div class="col-md-4 team-grids my-md-0 my-4 text-center">
-					<img src="images/team3.jpg" class="img-fluid" alt="">
+					<img src="images/sa.jpg" class="img-fluid" alt="">
 					<div class="team-info">
 						<div class="caption mb-3">
-							<h4>Adam Ster</h4>
+							<h4>Saurabh Mishra</h4>
 						</div>
 						<div class="social-icons-section">
 							<a class="fac" href="#">
@@ -255,7 +255,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- footer -->
 	<footer class="py-5">
 		<div class="container pt-xl-5 pt-lg-3">
-			<!-- newsletter -->
+			<!-- newsletter --><!-- 
 			<div class="newsletter_right_w3w3pvt-lau pb-md-5 pb-3" id="newsletter">
 				<h2 class="tittle text-wh mb-5 font-weight-bold">Subscribe Newsletter</h2>
 				<div class="n-right-w3ls pt-3">
@@ -273,7 +273,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div>
 					</form>
 				</div>
-			</div>
+			</div> -->
 			<!-- //newsletter -->
 			<!-- footer bottom -->
 			<div class="row pt-xl-5 pt-lg-3">
