--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="zxx">
 
 <head>
-	<title>Organic Food Agriculture Category Bootstrap Responsive Web Template | Home :: W3layouts</title>
+	<title>Vkyor</title>
 	<!-- Meta tag Keywords -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
@@ -94,7 +94,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="style-banner-inner">
 							<h3 class="font-weight-bold text-uppercase"><span class="font-weight-normal">Live</span> Organic for <span class="font-weight-normal">Live</span>
 								Healthy </h3>
-							<p class="mt-3">Fruits, Vegetables & Organic Fresh Food</p>
+							<p class="mt-3"></p>
 							<a href="about.html" class="btn button-style mt-sm-5 mt-4">Read More</a>
 						</div>
 					</div>
@@ -305,9 +305,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- //testimonials -->
 
 	<!-- slides images -->
-	<div class="slide-imaes">
+<!-- 	<div class="slide-imaes">
 
-	</div>
+	</div> -->
 	<!-- //slides images -->
 
 	<!-- footer -->
